--- a/wp-content/themes/redstarter/sass/_variables.scss
+++ b/wp-content/themes/redstarter/sass/_variables.scss
@@ -1,6 +1,6 @@
 // Structure
 
-$base__space-unit: 1.5em;
+$base__space-unit: 1em;
 
 // Colors
 
@@ -15,9 +15,9 @@ $color__background-pre: #eee;
 $color__background-ins: #fff9c0;
 $color__border-abbr: #666;
 
-$color__link: royalblue;
-$color__link-visited: purple;
-$color__link-hover: midnightblue;
+$color__link: #808080;
+$color__link-visited: #808080;
+$color__link-hover: #222222;
 
 // Typography
 
