--- a/wp-content/themes/redstarter/sass/_typography.scss
+++ b/wp-content/themes/redstarter/sass/_typography.scss
@@ -1,6 +1,9 @@
 /*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
+/* base font size */
+
+html { font-size: 16px; }
 
 body,
 button,
@@ -15,11 +18,23 @@ textarea {
 
 /* Headings */
 
+h2, .entry-title a:visited, h2, .entry-title a {
+	color:#db272a;
+	font-size:1.4em;
+	text-decoration:none;
+}
+h2, .entry-title a:hover {
+	color:#222222;
+}
+
 h1, h2, h3, h4, h5, h6 {
 	font-family:'Overlock',serif;
 	clear: both;
 }
 
+h3{
+	font-size:1.3em;
+}
 /* Copy */
 
 p {
