--- a/wp-content/themes/redstarter/sass/style.scss
+++ b/wp-content/themes/redstarter/sass/style.scss
@@ -52,13 +52,14 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "mixins";
 
 // CSS included in style.css.
-
+@import "front-page";
+@import "footer";
 @import "normalize";
 @import "fonts";
 @import "typography";
 @import "elements";
 @import "forms";
-@import "head";
+@import "header";
 @import "navigation";
 @import "modules";
 @import "widgets";
