--- a/wp-content/themes/redstarter/sass/_footer.scss
+++ b/wp-content/themes/redstarter/sass/_footer.scss
@@ -2,6 +2,10 @@
 # footer styles
 --------------------------------------------------------------*/
 
+.footer-contact, p, .fa-phone, a:active a:hover {
+    color: #FFF;
+}
+
 .site-footer {
   margin:0 auto;
   background-color: #222222;
@@ -27,7 +31,11 @@
 
 .site-footer a {
   text-decoration:none;
-  color:#FFFFFF;
+  color:#FFF;
+}
+
+.footer-contact a:hover {
+  color:#FFF;
 }
 
 .footer-hours h2, .footer-contact h2 {
@@ -72,7 +80,7 @@
   padding-top:30px;
   background-color: #333333;
   text-align: center;
-  height:100px;
+  height:80px;
 }
 
 div .site-info a {
