--- a/wp-content/themes/redstarter/sass/_front-page.scss
+++ b/wp-content/themes/redstarter/sass/_front-page.scss
@@ -24,23 +24,103 @@
 .lrd-cat-loop {
   align-items:center;
   flex-direction:column;
-  padding: 20px;
+  padding: 20px 10px 10px 10px;
   display:flex;
   flex: 1 0 25%;
 }
 
-.left-image, .right-image, .right-inside-image, .left-inside-image {
-  padding: 0 20px 20px 20px;
-  flex: 1 0 25%;
+
+.front-page-btn a, a:hover {
+  text-decoration:underline;
+  color: #FFF !important;
 }
 
-h3, .left-image, h3, .right-image, h3, .right-inside-image, h3, .left-inside-image {
-  text-align:center;
-  color:#222;
+.front-page-btn {
+  padding:1em 2em 1em 2em;
+  border-radius: 3px;
+  background-color:#222;
+  color:#FFF;
+  text-decoration:none;
+}
+
+.products-cta {
+    background-color: #fafafa;
+    border: 1px solid #e1e1e1;
+    padding: 1.5rem;
+    margin: 3em auto 3em auto;
+    width: 1024px;
 }
 
 .category-images p {
   text-align:left;
-  color: #222222;
+  color: #222;
   line-height:1.3;
 }
+hr.divider {
+  text-align:center;
+  position: relative;
+  width:600px;
+  height:1px;
+margin-bottom:100px;
+}
+
+hr.divider::after {
+    font-family: FontAwesome;
+    content: '\f111';
+    color: #e1e1e1;
+    font-size: 16px;
+    transform: translate(-50%,-50%);
+    position: absolute;
+    top:50%;
+}
+
+.latest-news-title {
+  text-transform:uppercase;
+  text-align:center;
+}
+
+.latest-news-posts {
+    background-color: #fafafa;
+    border-bottom: 1px solid #e1e1e1;
+    border-top: 1px solid #e1e1e1;
+    padding: 3rem 0;
+}
+.news-post-loop {
+  display:flex;
+}
+
+
+.news-post-loop ul {
+  display:flex;
+  flex: 0 0 25%;
+  margin: 0;
+  padding: 0;
+  flex-wrap:wrap;
+
+
+}
+
+.news-post-loop li {
+
+}
+
+
+.latest-news-posts .image-post-loop {
+  height: 200px;
+  overflow: hidden;
+  position: relative;
+  border:1px solid #e1e1e1;
+}
+.products-cta .front-page-btn a, a:visited {
+  color: #FFF;
+}
+
+
+// .wp-post-image {
+//    transform: translate(-50%,-50%);
+//     left: 50%;
+//     max-width: none;
+//     position: absolute;
+//     top: 50%;
+//
+// }
